refactored scripts and added analyse script for system environment